<resources>
    <string name="app_name">MidtermExam</string>
    <string name="calc_BMI">計算 BMI 值</string>
    <string name="calc_BMR">計算 BMR 值</string>
    <string name="time_format">hh:mm:ss aa\nMM/dd/yyyy</string>
    <string name="author">by 1104108142 資工系 莊人傑</string>
    <string name="name">姓名：</string>
    <string name="gender">性別：</string>
    <string name="height">身高：</string>
    <string name="weight">體重：</string>
    <string name="waist">腰圍：</string>
    <string name="hint_name">請輸入姓名</string>
    <string name="hint_height">請輸入身高(cm)</string>
    <string name="hint_weight">請輸入體重(kg)</string>
    <string name="hint_waist">請輸入腰圍(cm)</string>
    <string name="hint_birthday">請輸入生日(西元)</string>
    <string name="start_calc">開始計算</string>
    <string name="go_to_home_page">回到首頁</string>
    <string name="man">男</string>
    <string name="female">女</string>
    <string name="oops">Oops...</string>
    <string name="calc_BMI_fail">名字不得為空且數值須大於 0</string>
    <string name="severely_obese">重度肥胖</string>
    <string name="moderately_obese">中度肥胖</string>
    <string name="mild_obese">輕度肥胖</string>
    <string name="overweight">體重過重</string>
    <string name="normal">健康體位</string>
    <string name="underweight">體重過輕</string>
    <string name="calc_result">計算結果</string>
    <string name="call_man">先生</string>
    <string name="call_female">小姐</string>
    <string name="birthday_fail">請使用 Picker 選擇生日且生日不要定在未來 :3</string>
    <string name="calc_BMR_fail">名字不得為空且數值須大於 0\n請使用 Picker 選擇生日且生日不要定在未來 :3</string>
    <string name="BMI_title">計算BMI-身體質量指數</string>
    <string name="BMR_title">計算BMR-基礎代謝率</string>
</resources>
