<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/mtf_cardHeight_final"
    android:layout_marginBottom="@dimen/mtf_cardHeight_final"
    tools:context="com.jackgrence.midtermexam.CalcBMI">
    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mtf_cardHeight_final"
        android:layout_marginRight="@dimen/mtf_cardHeight_final"
        app:mtf_labelColor="#666"
        app:mtf_image="@drawable/ic_face_black_24dp"
        >

        <EditText
            android:id="@+id/edtxName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:textColor="#333"
            android:textSize="15sp" />

    </com.github.florent37.materialtextfield.MaterialTextField>

    <RadioGroup
        android:id="@+id/rdoGenderGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mtf_cardHeight_final"
        android:layout_marginRight="@dimen/mtf_cardHeight_final"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdoMan"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man"/>

        <RadioButton
            android:id="@+id/rdoFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            />
    </RadioGroup>

    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mtf_cardHeight_final"
        android:layout_marginRight="@dimen/mtf_cardHeight_final"
        app:mtf_labelColor="#666"
        app:mtf_image="@drawable/ic_cake_black_24dp"
        >

        <EditText
            android:id="@+id/edtxBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_birthday"
            android:textColor="#333"
            android:textSize="15sp"
            android:onClick="birthdayPicker"/>

    </com.github.florent37.materialtextfield.MaterialTextField>

    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mtf_cardHeight_final"
        android:layout_marginRight="@dimen/mtf_cardHeight_final"
        app:mtf_labelColor="#666"
        app:mtf_image="@drawable/ic_accessibility_black_24dp"
        >

        <EditText
            android:id="@+id/edtxHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_height"
            android:textColor="#333"
            android:textSize="15sp" />

    </com.github.florent37.materialtextfield.MaterialTextField>

    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mtf_cardHeight_final"
        android:layout_marginRight="@dimen/mtf_cardHeight_final"
        app:mtf_labelColor="#666"
        app:mtf_image="@drawable/ic_accessible_black_24dp"
        >

        <EditText
            android:id="@+id/edtxWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_weight"
            android:textColor="#333"
            android:textSize="15sp" />

    </com.github.florent37.materialtextfield.MaterialTextField>


    <LinearLayout
        android:layout_marginLeft="@dimen/mtf_cardHeight_final"
        android:layout_marginRight="@dimen/mtf_cardHeight_final"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btnCalc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/start_calc"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp"
            android:onClick="startCalc"
            />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/go_to_home_page"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp"
            android:onClick="exit_activity"
            >
        </com.gc.materialdesign.views.ButtonRectangle>
    </LinearLayout>
</LinearLayout>

