<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextClock
        android:id="@+id/textClock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/colorTimer"
        android:background="@color/colorPrimary"
        android:format12Hour="@string/time_format"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btnBMI"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#1E88E5"
            android:text="@string/calc_BMI"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp"
            android:onClick="calcBMI"
            />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btnBMR"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#0da636"
            android:text="@string/calc_BMR"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp"
            android:onClick="calcBMR"
            >

        </com.gc.materialdesign.views.ButtonRectangle>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_weight="5"
        materialdesign:srcCompat="@drawable/fat_cat"/>

    <TextView
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/author"/>

</LinearLayout>
